# OOPtask4

./: Project4.sln  task4.cpp
Project4/: CMakeLists.txt  Project4.vcxproj  Time.cpp  TimeTest.cpp  main.cpp
tasks/: task10.1.cpp  task6.2.cpp  task6.cpp  task7.1.cpp  task7.2.cpp  task8.1.cpp  task9.1.cpp  task9.2.cpp
